--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.17.1",
     "apexcharts": "^3.30.0",
+    "axios": "^0.24.0",
     "bootstrap": "5.1.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
